Fixed spacing and some coloring

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 .comp{
     display: flex;
     flex-direction: row;
-    width: 650px;
+    width: 700px;
     height: 350px;
     padding: 25px;
     background-color: white;
@@ -26,6 +26,7 @@
     width: 285px;
     height: 285px;
     padding: 30px;
+    margin-left: 35px;
     background-color: hsl(183, 100%, 15%);
     border-radius: 15px;
 
@@ -34,6 +35,7 @@
 .left{
     display: flex;
     flex-direction: column;
+    gap: 15px;
 
 }
 
@@ -77,13 +79,13 @@
     color: hsla(183, 100%, 15%, 0.3);
 }
 
-.title {
+.right-title {
     font-size: 12px;
     color: hsl(189, 41%, 97%);
     margin-bottom: 0px;
 }
 
-.sub{
+.right-sub{
     font-size: 10px;
     color: hsl(184, 14%, 56%);
     margin-top: 2px;
@@ -94,6 +96,11 @@
     color: hsl(172, 67%, 45%);
 }
 
+.left-title{
+    font-size: 12px;
+    color: hsl(186, 14%, 43%);
+}
+
 .tip-buttons {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -102,24 +109,30 @@
 
 
 .tip-buttons button{
-    width: 80px;
+    width: 90px;
     height: 40px;
     background-color: hsl(183, 100%, 15%);
     color: white;
     border-radius: 5px;
-    font-size: 16px;
+    border: none;
+    font-size: 18px;
     font-weight: 700;
     font-family: "Space Mono", sans-serif;
     margin: 5px;
 }
 
+.tip-buttons button:hover{
+    background-color: hsl(185, 41%, 84%);
+    color:hsl(183, 100%, 15%);
+}
+
 #bill{
     height: 30px;
     border-radius: 7%;
-    border-color: hsla(172, 67%, 45%, 1);
+    border: none;
     text-align: right;
     font-family: 'Space Mono', sans-serif;
-    color: hsl(183, 100%, 15%);
+    background-color: hsl(189, 41%, 97%);
     font-weight: 800;
     font-size: large;
 }
@@ -127,17 +140,17 @@
 #num{
     height: 30px;
     border-radius: 7%;
-    border-color: hsla(172, 67%, 45%, 1);
+    border: none;
     text-align: right;
     font-family: 'Space Mono', sans-serif;
-    color: hsl(183, 100%, 15%);
+    background-color: hsl(189, 41%, 97%);
     font-weight: 800;
     font-size: large;
 }
 
 .input {
     position: relative;
-    width: 100%; 
+    width: 10%; 
   }
   
   .icon-dollar {
@@ -156,20 +169,21 @@
   
   .icon-person {
     position: absolute;
-    left: 314px; 
-    top: 87%;
+    left: 10px; 
+    top: 50%;
     transform: translateY(-50%);
     width: 10px; 
     height: 14px;
   }
 
 .custom-tip-input {
-    width: 72px;
-    height: 36px;
-    background-color: hsl(180, 42%, 93%);
-    color: hsl(183, 100%, 15%);
+    width: 90px;
+    height: 40px;
+    background-color:  hsl(189, 41%, 97%);
+    color:  hsl(186, 14%, 43%);
     border-radius: 5px;
-    font-size: 15px;
+    border: none;
+    font-size: 18px;
     font-weight: 700;
     font-family: "Space Mono", sans-serif;
     margin: 5px;
